# Inter-MCA

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake
config/: Cars.xml  calibration.xml
config/Boys/: mca.cfg  new_boys.xml  post.cfg  pre.cfg
config/Motherboard/: mca_calib.xml
config/NewMiniGarden/: mca.cfg  mca_calib.xml  post.cfg  pre.cfg  test-post.cfg  test-pre.cfg
config/TSPC/Boys/: post.cfg  pre.cfg
config/TSPC/HandTools/: mca_calib.xml  post.cfg  pre.cfg
config/TSPC/Motherboard/: mca_calib.xml  post.cfg  pre.cfg
config/TSPC/NewMiniGarden/: mca_calib.xml  post.cfg  pre.cfg
config/new-seq/: mca.cfg  test-post.cfg  test-pre.cfg  test.cfg
include/: utils.hpp
include/common/: data-structure.hpp  data_structure.hpp  parse.hpp  utils.hpp
include/postprocess/: postprocess.hpp
include/preprocess/: calibrate.h  data-structures.h  parse.h  preprocess.hpp
run/: tasks.json
scripts/: analysis-MI.ipynb  centerPoints.npy  centers.ipynb
src/: main.cpp
src/common/: parse.cpp  utils.cpp
src/draw-center/: draw.cpp  main.cpp
src/draw_center/: main.cpp
src/modules/Calibrate/: CMakeLists.txt
src/modules/Calibrate/src/: calibrate.cpp
src/postprocess/: main.cpp  postprocess.cpp  restore_corners.cpp  restore_main.cpp  restore_patches.cpp
src/preprocess/: calibrate.cpp  crop_realign.cpp  main.cpp  offset_vector.cpp  parse.cpp  preprocess.cpp
src/utils/: draw.cpp
temp/: centers.ipynb
